--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,11 @@ h1 {
 p {
     color: blueviolet;
 }
+
+main {
+    width: 80%;
+    height: auto;
+    padding: 20px 10px;
+    margin: auto;
+    background: rgb(228, 214, 185);
+}
