--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,31 @@ body p {
 }
 
 h1 {
+    font-size: 4rem;
     color: palevioletred;
 }
 
 p {
+    font-size: 2rem;
     color: blueviolet;
 }
 
 main {
     width: 80%;
     height: auto;
-    padding: 20px 10px;
+    padding: 0 0px 20px 0px;
     margin: auto;
     background: rgb(228, 214, 185);
+
+}
+
+.cabezera {
+    color: white;
+    font-size: 2.2rem;
+    text-align: start;
+
+    background: blue;
+    width: 100%;
+
+    margin: 0;
 }
