--- a/styles.css
+++ b/styles.css
@@ -32,12 +32,12 @@ main {
 
 }
 
-.cabezera {
+.cabecera {
     color: white;
     font-size: 2.2rem;
     text-align: start;
 
-    background: blue;
+    background: rgb(255, 0, 0);
     width: 100%;
 
     margin: 0;
